<resources>
    <string name="app_name">App_002</string>

    <string name="edittext_hint_primervalor">Ingrese la base</string>
    <string name="edittext_hint_segundovalor">Ingrese el exponente</string>
    <string name="edittext_hint_resultado">Resultado</string>

    <string name="button_text_potencia">Potencia</string>
    <string name="button_text_salir">Salir</string>

    <string name="edittext_hint_usuario">Digite el usuario</string>
    <string name="edittext_hint_clave">Digite la clave</string>

    <string name="button_text_ingresar">Ingresar</string>
    <string name="button_text_mostraractivity">Mostrar Activity</string>

    <string name="button_text_llamar">Llamar</string>
    <string name="button_text_navegador">Mostrar navegador</string>
    <string name="lista_de_valores">LISTA DE VALORES</string>

    <string name="menu_archivo">Archivo</string>
    <string name="menu_acercade">Acerca de...</string>

    <string name="menu_editar">Editar</string>
    <string name="menu_editar_cortar">Cortar</string>
    <string name="menu_editar_copiar">copiar</string>
    <string name="menu_editar_pegar">Pegar</string>

    <string name="menu_contextual_configuracion">Configuracion</string>
    <string name="menu_contextual_imprimir">Imprimir</string>
    <string name="menu_contextual_salir">Salir</string>

    <string name="edittext_text_codigo">Ingrese el código</string>
    <string name="edittext_text_nombre">Ingrese el nombre</string>
    <string name="edittext_text_apellido">Ingrese el apellido</string>
    <string name="edittext_text_saldo">Ingrese el saldo</string>


    <string name="button_text_insertar">Insertar</string>
    <string name="button_text_borrar">Borrar</string>
    <string name="button_text_modificar">Modificar</string>
    <string name="button_text_buscar">Buscar</string>
    <string name="button_text_mostrar_clientes">Mostrar Clientes</string>

</resources>